--- a/src/components/EntryNavigationButton/styles.scss
+++ b/src/components/EntryNavigationButton/styles.scss
@@ -4,6 +4,7 @@
   margin-top: 3rem;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  margin-bottom: 3rem;
   column-gap: 3rem;
 
   @include tablet {
