--- a/src/components/FooterPage/styles.scss
+++ b/src/components/FooterPage/styles.scss
@@ -3,15 +3,25 @@
 .footer-page {
   background-color: #414141;
   height: 128px;
+  display: flex;
+  align-items: center;
 
+  @include tablet {
+    flex-wrap: wrap;
+    padding: 1rem;
+  }
   &__box {
     margin: 0 auto;
     display: flex;
     max-width: $tablet-width;
     width: 100%;
     align-items: center;
-    height: 100%;
     gap: 2.5rem;
+    flex-wrap: wrap;
+    @include tablet {
+      gap: 1rem;
+    }
+
     p {
       font-size: 11px;
       font-weight: 300;
@@ -19,6 +29,7 @@
       letter-spacing: 0.032999999821186066px;
       text-align: left;
       color: var(--color-white);
+      cursor: pointer;
     }
   }
 }
