--- a/src/components/InputTransitionButton/styles.scss
+++ b/src/components/InputTransitionButton/styles.scss
@@ -1,7 +1,6 @@
 @use '../../styles/media' as *;
 
 .input-transition-button {
-  @include maxWidthContent;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   column-gap: 1rem;
@@ -38,6 +37,7 @@
       text-underline-position: from-font;
       text-decoration-skip-ink: none;
       color: var(--color-white);
+      padding-top: 4px;
     }
   }
 }
