--- a/src/components/BodyMetricsGraph/styles.scss
+++ b/src/components/BodyMetricsGraph/styles.scss
@@ -3,4 +3,13 @@
   width: 100%;
   background-color: var(--color-dark-600);
   padding: 1rem 2rem;
+
+  &__loading {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--color-white);
+  }
 }
