--- a/src/components/BodyRecord/styles.scss
+++ b/src/components/BodyRecord/styles.scss
@@ -11,6 +11,7 @@
   &__top {
     display: flex;
     align-items: center;
+
     p {
       &:first-child {
         font-family: Inter;
@@ -37,6 +38,15 @@
         text-decoration-skip-ink: none;
         color: var(--color-white);
       }
+    }
+
+    &__loading {
+      width: 100%;
+      height: 212px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: var(--color-white);
     }
   }
 
