--- a/src/components/MyDiary/styles.scss
+++ b/src/components/MyDiary/styles.scss
@@ -15,7 +15,14 @@
       padding: 0 1rem;
     }
   }
-
+  &__loading {
+    width: 100%;
+    height: 250px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 2rem;
+  }
   &__body {
     margin-bottom: 2rem;
     display: grid;
@@ -23,6 +30,7 @@
     column-gap: 1rem;
     row-gap: 1rem;
     color: var(--color-dark-500);
+
     @include tablet {
       grid-template-columns: repeat(2, 1fr);
       padding: 0 1rem;
