--- a/src/components/MyExercise/styles.scss
+++ b/src/components/MyExercise/styles.scss
@@ -42,6 +42,15 @@
     overflow: auto;
     padding-right: 2rem;
 
+    &__loading {
+      width: 100%;
+      height: 192px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: var(--color-white);
+    }
+
     &::-webkit-scrollbar {
       width: 6px;
       height: 6px;
